css/style.css
@import url("https://use.typekit.net/uix0fgg.css");

html {
	font-size: 70%;
}

body {
	font-family: calluna-sans, sans-serif;
	letter-spacing: .0125em;
}

/* Reduce text column width */
.book .book-body .page-wrapper .page-inner {
	max-width: 700px;
}

/* increase text column padding: for possibly expanding outer margin for typographical marking elements
.book .book-body .page-wrapper .page-inner section {
    padding-left: 30px;
    padding-right: 30px;
}*/

/*--- COLOR PALETTE ---

GLOBAL
#1aa9ab - Warhorn Turquoise

WHITE THEME
#333 - White Theme Text
#fff - White Theme Background
#364149 - White Theme Menu Text
#e7e7e7 - White Theme Footnote Rule

SEPIA THEME
#704214 - Sepia Text
#877f6a - Sepia Menu Text
#afa790 - Sepia Footnote Rule
#f3eacb - Sepia Background
darkred - Sepia Borders and Links

NIGHT THEME
#bdcadb - Night Text
#fffffa - Night Brighter Text
#c1c6d7 - Night Menu Text
#bcc1d2 - Night Menu Base Text (seems to be overridden)
#2d3143 - Night Menu Background
#f4f4f5 - Night Brighter Menu Text
#1c1f2b - Night Background
#3f5061 - Night Borders (Warhorn Darker Blue)

------*/


/*--- BODY FONTS ---*/

.book.font-family-0 {
	font-family: calluna, serif;
	font-variant-ligatures: common-ligatures;
  	-moz-font-feature-settings: "liga", "clig";
  	-webkit-font-feature-settings: "liga", "clig";
  	font-feature-settings: "liga", "clig";
}

.book.font-family-1 {
	font-family: calluna-sans, sans-serif;
	font-variant-ligatures: common-ligatures;
  	-moz-font-feature-settings: "liga", "clig";
  	-webkit-font-feature-settings: "liga", "clig";
  	font-feature-settings: "liga", "clig";
}

/* opening line style */
h1 + p::first-line, h2 + p::first-line {
	/*all small caps workaround*/
	text-transform: lowercase;
	font-variant: small-caps;
	letter-spacing:.05em;
	/* actual opentype all small caps code (does not work on ::first-line because of lack of support; overflow problem)
	font-variant-caps: all-small-caps;
	-moz-font-feature-settings: "smcp";
	-webkit-font-feature-settings: "smcp";
	font-feature-settings: "smcp";*/
}

/* don't do special opening line in front-matter paragraphs */
#header ~ div h1 + p::first-line {
    font-variant: normal;
    text-transform: none;
}

/* avoid initial oldstyle numeral */
.section p + p::first-letter {
        font-variant-numeric: lining-nums;
        -moz-font-feature-settings: "lnum";
        -webkit-font-feature-settings: "lnum";
        font-feature-settings: "lnum";
}

.smallcaps {
	font-variant:small-caps;
}

/* GREEK */

.book.font-family-0 span:lang(el) {
	font-family: minion-3, serif;
}

.book.font-family-1 span:lang(el) {
	font-family: minion-3, sans-serif;
}

/* HEADING STYLES */

/*FRONT MATTER HEADINGS*/

section#section-.normal {
    overflow: visible;
}

#header { /* white/generic title header specs */
    width: 100vw;
    position: relative;
    left: calc(-50vw + 50%);
    background-image: url("../images/title-background-white.png");
    background-color: #1aa9ab;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    overflow-x: hidden;
}

#header p em { /* remove italics from title header content */
    font-style: normal;
}

.color-theme-1 #header { /* sepia title header */
    background-image: url("../images/title-background-sepia.png");
    background-color: #877f6a;
}

.color-theme-2 #header { /* night title header */
    background-image: url("../images/title-background-night.png");
    background-color: #2d3143;
}

#header h1.title, #header p.author, #header p.date { /* white/generic title & author text specs */
    color: #fff;
    border-color: rgba(255, 255, 255, 25%);
    max-width: 670px;
}

.color-theme-1 #header h1.title, .color-theme-1 #header p.author, .color-theme-1 #header p.date { /* sepia title & author text specs */
    color: #f3eacb;
    border-color: rgba(243, 234, 203, 10%);
}

.color-theme-2 #header h1.title, .color-theme-2 #header p.author, .color-theme-2 #header p.date { /* night title & author text specs */
    color: #2d3143;
    border-color: rgba(45, 49, 67, 30%);
}

#header h1.title { /* generic title text specs */
    margin: 0 auto;
    padding: 1em 0 .4em .5em;
    text-transform: none;
    font-size: 5rem;
    letter-spacing: .03em;
}

#header p.author, #header p.date { /* generic author & date text specs */
    text-transform: lowercase;
    font-variant: small-caps;
    font-style: normal;
    font-size: 3rem;
    letter-spacing: .05em;
    text-align: right;
    margin: auto;
    padding-right: .4em;
    padding-bottom: 1.1em;
}

#header p.date { /* hide date from title header */
    display: none;
}

#about-this-book h1 {
    font-weight: 700;
    letter-spacing: .01em;
    text-transform: none;
    font-variant: normal;
    font-size: 1.2em;
    border: none;
}

/* --- */

/*BOOK BODY HEADINGS*/

h1, h2 {
	text-wrap: balanced; /*doesn't seem to actually be supported*/
}

h1 {
	font-family: calluna, serif;
	border-bottom: .1em solid #1aa9ab;
	line-height: 1;
	padding-bottom: .5em;
	font-weight: 400;
	/*all small caps*/
	text-transform: lowercase;
	font-variant: small-caps;
	letter-spacing:.1em;
	/*opentype asc*/
	/*font-variant-caps: all-small-caps;
	-moz-font-feature-settings: "smcp";
	-webkit-font-feature-settings: "smcp";
	font-feature-settings: "smcp";*/
}

h1 .header-section-number {
	display: block;
	font-size: .67em;
	padding-right: 0em;
	width: 75%;
}

h2 {
	font-weight: 700;
	line-height: 1.5em;
	letter-spacing: .6px;
	border-left: .15em solid #1aa9ab;
	padding-left: .5em;
}

/*sepia mode h2 rule*/
.book-color-theme-1 h2, .book-color-theme-2 h2 {
	border-color: inherit;
}

/*night mode h2 rule*/
.book-color-theme-2 h2 {
	border-color: #3f5061;
}

.book .book-body .page-wrapper .page-inner section.normal h2 {
	font-size: 1em;
}
/* ... */

